spec/e2e/loops/next/invalid.lit
# error: [line 3] Error at "next": Can't use 'next' outside of a loop.
fn function {
  next
}

# error: [line 7] Error at "next": Can't use 'next' outside of a loop.
next

# error: [line 12] Error at "next": Can't use 'next' outside of a loop.
while true {
  fn foo {
    next
  }
}
